Working to fix swagger in Render
